# MLOps_test

./: .gitignore  Makefile  README.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: test_on_push.yaml
data/: features_iris.csv
data/interim/: .gitignore  features_iris.csv.dvc
data/raw/: titanic_train.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
mlops/: features.py  pyproject.toml
notebooks/: Simle_ML_task_MLOps.ipynb
reports/: .gitignore
src/: evaluate.py  featurize.py  load_data.py  split_dataset.py  train.py
