[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["levanova <olaydy@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
black = "^23.12.1"
dvc = "^3.50.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"