[tool.poetry]
name = "mlops-materials"
version = "0.1.0"
description = ""
authors = ["levanova <olaydy@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.5"
nltk = "^3.8.1"
scikit-learn = "^1.4.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
transformers = "^4.36.2"
torch = "^2.1.2"
ipykernel = "^6.29.0"
pyarrow = "^14.0.2"
pandas = "^2.1.4"
mlflow = "^2.9.2"
black = "^23.12.1"
isort = "^5.13.2"
luigi = "^3.5.0"
nbformat = "^5.9.2"
nbclient = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
